--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "deploy": "yarn build && firebase deploy --except functions"
+    "deploy": "yarn build && firebase deploy --except functions",
+    "test": "vitest run"
   },
   "dependencies": {
     "firebase": "^9.9.0",
@@ -22,6 +23,7 @@
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.30.1",
+    "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
