yarn add react-firebase-hooks

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "firebase": "^9.9.0",
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-firebase-hooks": "^5.0.3"
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.3",
