--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "prettier": "^2.7.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
-    "vitest": "^0.18.0"
+    "vite-plugin-windicss": "^1.8.6",
+    "vitest": "^0.18.0",
+    "windicss": "^3.5.6"
   }
 }
