--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "emulators:start:firestore": "firebase emulators:start --only firestore"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "firebase": "^9.9.0",
     "lodash-es": "^4.17.21",
     "react": "^18.0.0",
