Messageコンポーネントのpropsからsenderを排除

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "baseUrl": "src",
     "paths": {
       "@/*": ["*"]
-    }
+    },
+    "noUncheckedIndexedAccess": true
   },
   "include": ["src", "test"],
   "references": [{ "path": "./tsconfig.node.json" }]
