--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^2.0.3",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.3.0",
     "@types/lodash-es": "^4.17.6",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -37,8 +39,8 @@
     "typescript": "^4.6.3",
     "vite": "^2.9.9",
     "vite-plugin-windicss": "^1.8.6",
-    "windicss": "^3.5.6",
     "vite-tsconfig-paths": "^3.5.0",
-    "vitest": "^0.18.0"
+    "vitest": "^0.18.0",
+    "windicss": "^3.5.6"
   }
 }
