--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "deploy": "yarn build && firebase deploy --except functions",
+    "deploy:rules": "firebase deploy --only firestore:rules,storage",
     "test": "vitest run",
     "emulators:start:firestore": "firebase emulators:start --only firestore"
   },
