--- a/functions/package.json
+++ b/functions/package.json
@@ -27,7 +27,8 @@
     "eslint-plugin-import": "^2.25.4",
     "firebase-functions-test": "^0.2.0",
     "prettier": "^2.7.1",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "vitest": "^0.21.0"
   },
   "private": true
 }
