--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "vitest run"
   },
   "engines": {
     "node": "16"
@@ -25,7 +26,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^0.2.0",
+    "firebase-functions-test": "^2.2.0",
     "prettier": "^2.7.1",
     "typescript": "^4.5.4",
     "vitest": "^0.21.0"
