--- a/functions/tsconfig.json
+++ b/functions/tsconfig.json
@@ -7,7 +7,8 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2017",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": ["vitest/globals"]
   },
   "compileOnSave": true,
   "include": [
