--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "deploy": "yarn build && firebase deploy --except functions",
     "test": "vitest run",
-    "emulators:start:firestore": "firebase emulators:start --only firestore"
+    "emulators:start": "firebase emulators:start --only firestore,storage",
+    "emulators:test": "firebase emulators:exec --only firestore,storage 'yarn test'"
   },
   "dependencies": {
     "date-fns": "^2.28.0",
