--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,7 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "lib/src/index.js",
   "dependencies": {
     "firebase-admin": "^11.0.1",
     "firebase-functions": "^3.18.0"
