--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,7 @@
-VITE_FIREBASE_API_KEY=''
+VITE_FIREBASE_API_KEY='dummy-api-key'
 VITE_FIREBASE_AUTH_DOMAIN=''
-VITE_FIREBASE_PROJECT_ID=''
+VITE_FIREBASE_PROJECT_ID='testable-firebase-sample-chat-test'
 VITE_FIREBASE_STORAGE_BUCKET=''
 VITE_FIREBASE_MESSAGING_SENDER_ID=''
 VITE_FIREBASE_APP_ID=''
-VITE_FIREBASE_MESSAGING_VAPID_KEY=''
-VITE_EMULATORS=''
+VITE_EMULATORS='true'
