--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
         run: sleep 10
 
       - name: security ruleテスト実行
-        run: yarn test:ci
+        run: yarn test
 
       - name: エミュレータのレポートの待機...
         run: sleep 10
