--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -4,5 +4,5 @@
     "lib": ["es5", "dom"],
     "types": ["cypress", "node"]
   },
-  "include": ["**/*.ts", "e2e/spec.cy.ts.bk", "e2e/spec.cy.ts.bk"]
+  "include": ["**/*.ts"]
 }
